section 1 and 2 complete

--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -5,9 +5,9 @@ sidebar_position: 10
 
 
 ## What you'll learn 
- - Using MongoTemplate for data access. 
- - Implementing object mapping with Spring Data MongoDB.
  - Using data repositories for CRUD operations, and harnessing the power of aggregation pipelines for advanced querying
+ - Implementing object mapping with Spring Data MongoDB.
+ - Using `MongoTemplate` for data access. 
  - Multi-document transactions and demonstrate the implementation of client-side field-level encryption  
 
 ### Prerequisites
