--- a/docs/03-quick-start.mdx
+++ b/docs/03-quick-start.mdx
@@ -11,21 +11,22 @@ Before we dive into the content, let's ensure that your environment is properly 
    ```bash
    java -version
    ```
-Ensure that the output includes `java 21`.
+    Ensure that the output includes `java 21`.
 3. If it's not installed, download and install it from the official [OpenJDK website](https://openjdk.org/projects/jdk/21/).
 
 # 2. Clone the Workshop Repository
 1. Clone the GitHub repository to your local machine using the following command:
     ```bash
-    git clone https://github.com/your-repository/workshop-repo.git
+    git clone -b session1 https://github.com/mongodb-developer/mdb-java-workshop.git mdb-java-workshop
     ```
 2. Navigate to the directory:
     ```bash
-    cd workshop-repo
+    cd mdb-java-workshop
     ```
 # 3. Create a MongoDB Atlas Account
 1. Visit [MongoDB Atlas](https://account.mongodb.com/account/register) and sign up for a free account.
 2. Follow the instructions to create a new project and a MongoDB cluster.
-3. Make sure to note down your cluster's connection details; you'll need them to connect your application.  
+3. Make sure to note down your cluster's connection details; you'll need them to connect your application.
+4. Load your cluster with your sample dataset.  
 
 Once you've completed these steps, you'll be ready to follow along with the workshop!
