--- a/docs/05-repositories-and-aggregation/3-Exercises.mdx
+++ b/docs/05-repositories-and-aggregation/3-Exercises.mdx
@@ -2,6 +2,11 @@
 [Spring Support for MongoDB Aggregations](https://docs.spring.io/spring-data/mongodb/reference/mongodb/aggregation-framework.html)
 [MongoDB Aggregation Operations](https://www.mongodb.com/docs/manual/aggregation/)
 
+Switch to session2 for this exercise:
+```bash
+git checkout session2
+```
+
 ## Question 1: Total Sales by Location
 Calculate the total sales grouped by each location and return a result that includes the location's name (or ID) and the total sales amount.
 
