--- a/docs/02-what-is-mongodb.mdx
+++ b/docs/02-what-is-mongodb.mdx
@@ -4,5 +4,24 @@ sidebar_position: 20
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# 🦖 What is MongoDB
+# What is MongoDB
 
+MongoDB is a type of NoSQL database that is used for managing large volumes of data. 
+The name “Mongo” comes from “Humongous,” describing the data size the software is meant for. 
+
+MongoDB is a document database. 
+MongoDB stores data in flexible, JSON-like (BSON) documents, meaning fields can vary from document to document 
+and data structure can be changed over time.
+
+The document model maps to the objects in your application code, making data easy to work with.
+
+MongoDB is a distributed database at its core, so high availability, horizontal scaling, 
+and geographic distribution are built in and easy to use.
+
+MongoDB uses collections to store a bulk load of data. Within the collections are documents analogous to rows 
+in a table in the relational database system. Documents (which can have multiple and different fields and 
+data types) are made up of keys, the most basic data unit in MongoDB. 
+
+One can alter the structure of already saved data in a document under the NoSQL MongoDB by adding or 
+removing new and current fields. Different data types can also be used with the same document. 
+This gives MongoDB a flexible structure. 
