--- a/docs/04-spring-data-mongodb/3-Create.mdx
+++ b/docs/04-spring-data-mongodb/3-Create.mdx
@@ -33,7 +33,7 @@ public List<Grade> saveGrades(List<Grade> grades) {
 }
 ```
 
-## Insert
+## insert
 Alternatively, you can use the `insert()` method provided by the `StudentRepository` to insert a grade into the database. 
 This method differs from `save()` in that it only performs an insert operation and does not perform an update if 
 the grade already exists.
