--- a/docs/06-transactions-and-encryption/1-transactions.mdx
+++ b/docs/06-transactions-and-encryption/1-transactions.mdx
@@ -12,29 +12,42 @@ will see a consistent snapshot of the database, and modifications made by a tran
 3. **Change Streams:** MongoDB allows applications to access real-time data changes without the complexity and risk of tailing the oplog. 
 This feature, introduced in MongoDB 3.6, enables applications to stream changes to documents in a database in real-time.  
 
-## Example Scenario: Implementing a Shopping Cart
-Let’s consider a scenario where a shopping cart application needs to manage product inventory and customer carts atomically to prevent selling more 
-items than available in stock.  
+Always start the ChangeStreams class in the transactions package first because it creates the product collection with the required JSON Schema. See the related blog post.
 
-Step 1: Setting Up Your Environment
-Clone the Java project using Git and set up the project:  
+## Example Scenario: Implementing a Shopping Cart
+Let’s consider a scenario where a shopping cart application needs to manage product inventory and customer carts atomically to prevent selling more items than available in stock.
+
+### Step 1: Setting Up Your Environment
+Clone the Java project using Git and set up the project:
+
 ```bash
-git ...
+git clone git@github.com:mongodb-developer/java-quick-start.git
+cd java-quick-start
 ```
 
-## Step 2: Understanding the Code Structure
+### Step 2: Understanding the Code Structure
 The project contains two main classes:
 
- - ChangeStreams.java: Monitors data changes in MongoDB.
- - Transactions.java: Handles the transaction logic.
-## Step 3: Running the Demo
+- `ChangeStreams.java`: Monitors data changes in MongoDB.
+- `Transactions.java`: Handles the transaction logic.
 
-## Step 4: Observing Behaviors
-1. **Without Transaction:** Attempt to update stock and add items to the cart separately. This can potentially lead 
-to inconsistencies if one operation fails.
-2. **With Transaction:** Perform both operations atomically. If the stock is insufficient, the transaction will roll back, 
-preventing any changes to the database and ensuring consistency.  
+### Step 3: Running the Demo
+Run the ChangeStreams Class:
+```bash
+mvn spring-boot:run -Dspring-boot.run.arguments="change-streams"
+```
+
+Run the Transactions Class in a Separate Terminal:
+
+```bash
+mvn spring-boot:run -Dspring-boot.run.arguments="transactions"
+```
+
+### Step 4: Observing Behaviors
+- **Without Transaction**: Attempt to update stock and add items to the cart separately. This can potentially 
+lead to inconsistencies if one operation fails.
+- **With Transaction**: Perform both operations atomically. If the stock is insufficient, the transaction 
+will roll back, preventing any changes to the database and ensuring consistency.
 
 ## Conclusion
-MongoDB’s support for multi-document transactions allows developers to handle complex data changes with ease, ensuring 
-data integrity and consistency across operations. This makes MongoDB suitable for applications requiring robust transactional support, similar to traditional relational databases.
+MongoDB’s support for multi-document transactions allows developers to handle complex data changes with ease, ensuring data integrity and consistency across operations. This makes MongoDB suitable for applications requiring robust transactional support, similar to traditional relational databases.
