added csfle diagram

--- a/docs/06-transactions-and-encryption/2-csfle.mdx
+++ b/docs/06-transactions-and-encryption/2-csfle.mdx
@@ -8,6 +8,8 @@ CSFLE encrypts sensitive data before it reaches the MongoDB cluster, making the 
 and at rest. The process involves generating a master key, creating Data Encryption Keys (DEK), encrypting specific 
 fields in your documents, and securely managing the keys.
 
+![Architecture for CSLFE](/img/csfle-diagram.jpg)
+
 Key Concepts
 - **Encryption**: CSFLE encrypts sensitive data before it reaches the MongoDB cluster, ensuring that the 
 data remains secure during transit and at rest.
